tests/for/struct_before_body.rz
for i in 4 struct Foo {} // error: missing block start '{' after 'for' condition